# rockpaperscissors

./: README.md  build.gradle  pyproject.toml  settings.gradle
src/main/java/: PlayCli.java  rckpprsci.java  weather.java
src/main/js/: rckpprsci.js
src/main/py/: rckpprsci.py  weather.py
src/main/resources/: application.properties
