[project]
name = "rock-paper-scissors"
version = "0.1.0"
description = "Play Rock Paper Scissors and try OpenWeather API"
authors = [
    {name = "Amit Rajpurkar",email = "amit.rajpurkar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
